# dbt-athena-sandbox

./: .pre-commit-config.yaml  Makefile  Pulumi.yaml  README.md  dbt_project.yml  profiles.yml  pyproject.toml
data/: users.json
infra/: __main__.py
infra-as-code/: Pulumi.yaml  __main__.py
infra-as-code/data/: user_events.json  users.json
models/foundation/: dim_users.sql  fct_user_events.sql
models/mart/: fct_user_event_counts.sql
models/src/: src_user_events.sql  src_users.sql
